windows_instance.tf

data "aws_ami" "windows" {
  most_recent = true
  owners = ["amazon"]
  filter {
    name = "name"
    values = [
      "Windows_Server-2019-English-Full-Base-*",
    ]
  }
  filter {
    name = "owner-alias"
    values = [
      "amazon",
    ]
  }
}


resource "aws_instance" "jenkins-instance" {
  ami           = data.aws_ami.windows.id
  instance_type = "t2.small"
  key_name      = var.keyname
  #vpc_id          = "${aws_vpc.development-vpc.id}"
  vpc_security_group_ids = ["${aws_security_group.sg_allow_rdp_jenkins.id}"]
  subnet_id              = aws_subnet.public-subnet-1.id
  #name            = "${var.name}"
  user_data = file("installChocolatey.cmd")

  associate_public_ip_address = true
  tags = {
    Name = "Jenkins-Instance"
  }
}

resource "aws_security_group" "sg_allow_rdp_jenkins" {
  name        = "allow_ssh_jenkins"
  description = "Allow rdp and Jenkins inbound traffic"
  vpc_id      = aws_vpc.development-vpc.id

  ingress {
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8096
    to_port     = 8096
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
